--- a/index.html
+++ b/index.html
@@ -1,1 +1,125 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset = "UTF-8">
+    <meta name = "viewport" content="width=device-width, initial-scale=1.0">
+    <title>kavinkumar's portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+             <li><a href="#About-section">About</a></li>
+             <li><a href=#Skills-section>Skills</a></li>
+             <li><a href="#Projects-section">Projects</a></li>
 
+            <li><a href="#Contact-section">Contact</a></li>   
+            </ul>
+        </nav>
+    </header>
+    
+    <section id="About-section">
+        <h2> About Me</h2>
+        <p>I like to build software products that make a difference. I’m passionate about turning ideas into reality through code and design, and I enjoy the entire process—from brainstorming solutions to seeing them come to life. I believe in creating user-friendly, efficient, and innovative applications that solve real-world problems. When I’m not working on a project, you’ll probably find me laughing and having fun with people around me, sharing moments, and enjoying the little things in life.</p>
+        
+    </section>
+    <section id="Skills-section">
+        <h2>My Skills</h2>
+        <ul>
+            <li>
+                <figure>
+                    <img src="./img/HTML5-logo.png" alt="html logo" height="512" width="512">
+                    <figcaption>Html</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="./img/css-logo.png" alt="css logo" height="851" width="951">
+                    <figcaption>CSS</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="./img/JavaScript-logo.png" alt="javascript logo" height="900" width="900">
+                    <figcaption>JavaScript</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src = "./img/Python-logo.png" alt="python logo" height="438" width="481">
+                    <figcaption>Python</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="./img/java-logo.png" alt="java logo" height="144" width="144">
+                    <figcaption>Java</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="./img/Postgresql-logo.png" alt="postgresql logo" height="810" width="835">
+                    <figcaption>PostgreSQL</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="./img/git-logo.png" alt="git logo" height="400" width="400">
+                    <figcaption>Git version control</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="./img/Pytorch-logo.png"
+                    alt = "pytorch logo" height="2500" width="1252">
+                    <figcaption>Pytorch</figcaption>
+                </figure>
+            </li>
+        </ul>
+    </section>
+    <section id="Projects-section">
+        <h2>My Projects</h2>
+        <ul>
+            <li>
+                <figure>
+                    <img src="./img/document-generator.jpg"
+                    alt="document generator project" height="371" width="293">
+                    <figcaption>Document Generator</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="./img/cgpa-calculator.jpeg" alt="cgpa calculator project" height="1280" width="1280">
+                    <figcaption>CGPA Calculator</figcaption>
+                </figure>
+            </li>
+        </ul>
+    </section>
+    <section id="Contact-section">
+        <h2>LET'S TALK</h2>
+        <ul>
+            <li>
+                <a href="mailto:kavinkumar36365@gmail.com">Mail</a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/kavinkumar-s-p/">LinkedIn</a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/kavin_36363/">Instagram</a>
+            </li>
+            <li>
+                <a href="https://x.com/kavin36365">X</a>
+            </li>
+            <li>
+                <a href="https://github.com/kavinkumar36365">github</a>
+            </li>
+        </ul>       
+    </section>
+    <footer>
+        <p>&copy; Copyright <span id="year"></span>. All rights reserved.</p>
+    </footer>
+</body>
+
+</html>
