added ham menu in mobile version and made header fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <header>
-        <nav>
+        <section class="header-bar">
+            <button class="menu-btn">
+                <div class="menu-icon"></div>
+            </button>
+        </section>
+        <nav class="nav-menu">
             <ul>
              <li><a href="#About-section">About</a></li>
              <li><a href=#Skills-section>Skills</a></li>
