--- a/index.html
+++ b/index.html
@@ -32,57 +32,41 @@
         </section>
         <section id="Skills-section">
             <h2>My Skills</h2>
-            <ul>
-                <li>
-                    <figure>
-                        <img src="./img/HTML5-logo.png" alt="html logo" height="512" width="512" loading="lazy">
-                        <figcaption>Html</figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./img/css-logo.png" alt="css logo" height="851" width="951" loading="lazy">
-                        <figcaption>CSS</figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./img/JavaScript-logo.png" alt="javascript logo" height="900" width="900" loading="lazy">
-                        <figcaption>JavaScript</figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src = "./img/Python-logo.png" alt="python logo" height="438" width="481" loading="lazy">
-                        <figcaption>Python</figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./img/java-logo.png" alt="java logo" height="144" width="144" loading="lazy">
-                        <figcaption>Java</figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./img/Postgresql-logo.png" alt="postgresql logo" height="810" width="835" loading="lazy">
-                        <figcaption>PostgreSQL</figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./img/git-logo.png" alt="git logo" height="400" width="400" loading="lazy">
-                        <figcaption>Git version control</figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./img/Pytorch-logo.png"
-                        alt = "pytorch logo" height="2500" width="1252" loading="lazy">
-                        <figcaption>Pytorch</figcaption>
-                    </figure>
-                </li>
-            </ul>
+            <div class="skills-grid">
+                <figure>
+                    <img  src="./img/HTML5-logo.png" alt="html logo" height="512" width="512" loading="lazy">
+                    <figcaption>Html</figcaption>
+                </figure>       
+                <figure>
+                    <img  src="./img/css-logo.png" alt="css logo" height="851" width="951" loading="lazy">
+                    <figcaption>CSS</figcaption>
+                </figure>
+                <figure>
+                    <img  src="./img/JavaScript-logo.png" alt="javascript logo" height="900" width="900" loading="lazy">
+                    <figcaption>JavaScript</figcaption>
+                </figure>
+                <figure>
+                    <img  src = "./img/Python-logo.png" alt="python logo" height="438" width="481" loading="lazy">
+                    <figcaption>Python</figcaption>
+                </figure>
+                <figure>
+                    <img  src="./img/java-logo.png" alt="java logo" height="144" width="144" loading="lazy">
+                    <figcaption>Java</figcaption>
+                </figure>
+                <figure>
+                    <img  src="./img/Postgresql-logo.png" alt="postgresql logo" height="810" width="835" loading="lazy">
+                    <figcaption>PostgreSQL</figcaption>
+                </figure>
+                <figure>
+                    <img class="image-s" src="./img/git-logo.png" alt="git logo" height="400" width="400" loading="lazy">
+                    <figcaption>Git</figcaption>
+                </figure>
+                <figure>
+                    <img  src="./img/Pytorch-logo.png"
+                    alt = "pytorch logo" height="2500" width="1252" loading="lazy">
+                    <figcaption>Pytorch</figcaption>
+                </figure>
+            </div>
         </section>
         <section id="Projects-section">
             <h2>My Projects</h2>
@@ -126,6 +110,7 @@
     <footer>
         <p>&copy; Copyright <span id="year"></span>. All rights reserved.</p>
     </footer>
+    
 </body>
 
 </html>
