applied grid layout to projects section

--- a/index.html
+++ b/index.html
@@ -70,21 +70,17 @@
         </section>
         <section id="Projects-section">
             <h2>My Projects</h2>
-            <ul>
-                <li>
-                    <figure>
-                        <img src="./img/document-generator.jpg"
-                        alt="document generator project" height="371" width="293" loading="lazy">
-                        <figcaption>Document Generator</figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure>
-                        <img src="./img/cgpa-calculator.jpeg" alt="cgpa calculator project" height="1280" width="1280" loading="lazy">
-                        <figcaption>CGPA Calculator</figcaption>
-                    </figure>
-                </li>
-            </ul>
+            <div class="projects-grid">
+                <figure>
+                    <img src="./img/document-generator.jpg"
+                    alt="document generator project" height="371" width="293" loading="lazy">
+                    <figcaption>Document Generator</figcaption>
+                </figure>
+                <figure>
+                    <img src="./img/cgpa-calculator.jpeg" alt="cgpa calculator project" height="1280" width="1280" loading="lazy">
+                    <figcaption>CGPA Calculator</figcaption>
+                </figure>
+            </div>
         </section>
         <section id="Contact-section">
             <h2>LET'S TALK</h2>
